# Job_search_with_DB_connection

./: .env.example  README.md  flake8  main.py  pyproject.toml
src/: db_manager.py  hh_api.py  sql_manager.py
